# flapy

./: README.md  requirements.txt  setup.cfg
examples/: class-mode.py  color_card.py  flapy_path.py  func-mode.py  push_button.py
flapy/: __init__.py  index.py
flapy/common/: __init__.py  api.py  base.py  declarative.py  overload.py  widget_type.py
flapy/effects/: __init__.py  drop_shadow.py
flapy/layouts/: __init__.py
flapy/layouts/box_layout/: __init__.py  add_layout.py  add_widget.py
flapy/layouts/form_layout/: __init__.py  add_layout.py  add_widget.py
flapy/layouts/grid_layout/: __init__.py  add_layout.py  add_widget.py
flapy/layouts/hbox_layout/: __init__.py  add_layout.py  add_widget.py
flapy/layouts/vbox_layout/: __init__.py  add_layout.py  add_widget.py
flapy/signals/: __init__.py  signals.py  types.py
flapy/widgets/: __init__.py
flapy/widgets/app/: __init__.py
flapy/widgets/card/: __init__.py
flapy/widgets/frame/: __init__.py
flapy/widgets/label/: __init__.py
flapy/widgets/line_edit/: __init__.py
flapy/widgets/push_button/: __init__.py
flapy/widgets/scroll_area/: __init__.py
flapy/widgets/widget/: __init__.py
flapy/widgets/window/: __init__.py
