[metadata]
name = flapy
version = 0.0.1
author = Osama Mohammed Al-zabidi
author_email = omamkaz@gmail.com
description = A Qt library extension for building declarative programming-style UIs completely within Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omamkaz/flapy
project_urls =
    Bug Tracker = https://github.com/omamkaz/flapy/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
license = GPL-3.0-or-later
license_files = LICENSE.txt


[options]
python_requires = >=3.8
install_requires = 
    PySide6==6.5.0
packages = find:
package_dir =
    = .


[upload_sphinx]
upload-dir = doc/build/html
